WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97348
[BlackBerry] Really fix
bug 95488
that user can get the authentication challenge dialog while the other tab has focus.
https://bugs.webkit.org/show_bug.cgi?id=97348
Summary
[BlackBerry] Really fix bug 95488 that user can get the authentication challe...
Lyon Chen
Reported
2012-09-21 10:42:15 PDT
Bug 95488
(
https://bugs.webkit.org/show_bug.cgi?id=95488
) is closed after its first patch is in. We need another patch to really fix the issue that pop up authentication challenge dialog when the page has no focus.
Attachments
patch for 97348
(34.44 KB, patch)
2012-09-21 11:24 PDT
,
Lyon Chen
no flags
Details
Formatted Diff
Diff
Fixing coding style errors in ChangeLog
(34.47 KB, patch)
2012-09-21 11:34 PDT
,
Lyon Chen
joenotcharles
: review-
Details
Formatted Diff
Diff
Update to use deferLoading
(30.17 KB, patch)
2012-09-21 13:41 PDT
,
Lyon Chen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Lyon Chen
Comment 1
2012-09-21 11:24:13 PDT
Created
attachment 165157
[details]
patch for 97348
Lyon Chen
Comment 2
2012-09-21 11:25:57 PDT
+Yong, Rob, Joe.
WebKit Review Bot
Comment 3
2012-09-21 11:26:39 PDT
Attachment 165157
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit/blackberry/ChangeLog:10: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebKit/blackberry/ChangeLog:11: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebKit/blackberry/ChangeLog:13: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:12: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:13: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:14: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:17: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:20: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 8 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Lyon Chen
Comment 4
2012-09-21 11:34:26 PDT
Created
attachment 165160
[details]
Fixing coding style errors in ChangeLog
Joe Mason
Comment 5
2012-09-21 13:01:54 PDT
Comment on
attachment 165160
[details]
Fixing coding style errors in ChangeLog We already have deferLoading, you should use that instead of this new "freeze"
Lyon Chen
Comment 6
2012-09-21 13:41:27 PDT
Created
attachment 165180
[details]
Update to use deferLoading
Joe Mason
Comment 7
2012-09-21 13:53:04 PDT
Comment on
attachment 165180
[details]
Update to use deferLoading lgtm
WebKit Review Bot
Comment 8
2012-09-21 13:56:32 PDT
Comment on
attachment 165180
[details]
Update to use deferLoading Rejecting
attachment 165180
[details]
from review queue.
jmason@rim.com
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 9
2012-09-21 13:57:10 PDT
Comment on
attachment 165180
[details]
Update to use deferLoading Rejecting
attachment 165180
[details]
from commit-queue.
jmason@rim.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 10
2012-09-21 14:02:18 PDT
Comment on
attachment 165180
[details]
Update to use deferLoading Clearing flags on attachment: 165180 Committed
r129251
: <
http://trac.webkit.org/changeset/129251
>
WebKit Review Bot
Comment 11
2012-09-21 14:02:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug